# gradechecker

./: .dockerignore  Dockerfile  README.md  api.py  assignments.BAK  assignments.txt  checkemail.py  docker-compose.yaml  docker_upload.tgz  flask_gradechecker.py  gradechecker.py  hello.py  pydanticai_gradechecker.py  pyproject.toml  requirements.txt
docker_upload/: api.py
