[project]
name = "grade-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "flask>=3.1.0",
    "helium>=5.1.0",
    "litellm>=1.61.6",
    "pydantic-ai[logfire]>=0.0.24",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]
